# webview2-desktop-sample

./: CMakeLists.txt  README.md
source/: js_handle.hpp  main.cpp  resource_handle.hpp  webview_app.cpp  webview_app.hpp
